<resources>
    <string name="app_name">Logic of utterances</string>
    <string name="name_prepod">Черненко Оксана Олексіївна</string>
    <string name="status_prepod">Доцент, кандидат фізико-математичних наук</string>
    <string name="my_name">Сивокінь Олександр Юрійович</string>
    <string name="my_status">Магістр</string>
    <string name="firstLesson">Тестові завдання</string>
    <string name="secondLesson">Практичні завдання</string>
    <string name="thirdLesson">Задача з поясненням</string>
    <string name="check">Перевірити</string>
    <string name="nametest1">Які з речень є висловлюванням?</string>
    <string name="test1">1. На вулиці дощ. "\n" 2.Викладач не прийшов на урок. "\n" 3. Коли прийде Сергій? "\n" 4. Читай уважно! </string>
    <string name="ch_1">1</string>
    <string name="ch_2">2</string>
    <string name="ch_3">3</string>
    <string name="ch_4">4</string>
    <string name="logic_operation">Логічні операції</string>
    <string name="logicAND">Логічне і -</string>
    <string name="logicOR">Логічне або -</string>
    <string name="logicIF">Якщо,..то -</string>
    <string name="task2">Встановіть відповідність шляхом перетягування</string>
    <string name="task3">Вкажіть формулу закону суперечності</string>
    <string name="task3var">1) p ∧ ¬p = F "\n" 2) p ∨ ¬p = F "\n" 3) p ∨ q = q ∨ p "\n" 4)p ∧ p = p</string>
    <string name="task4">p → q = ¬p ∨ q це</string>
    <string name="task4var">1) Правило еквівалентності "\n" 2) Правило імплікації "\n" 3) Правило комутативності "\n" 4) Немає вірної відповіді</string>
    <string name="task5">p ~ q = (p → q) ∧ (q → p) це</string>
    <string name="task5var">1) Правило імплікації "\n" 2) Правило комутативності "\n" 3) Правило еквівалентності "\n" 4) Закон суперечності</string>
    <string name="task6">p ∨ (q ∧ r) = (p ∨ q) ∧ (p ∨ r) це</string>
    <string name="task6var">1) закон комутативності "\n" 2) правило інтерполяції "\n" 3) закон дистрибутивності "\n" 4) закон поглинання</string>
    <string name="task7">«Якщо вологість велика та температура висока, то ми не почуваємо себе добре» представлено складним висловлюванням. Де воно?</string>
    <string name="task7var">1) ((p ∧ q) → (¬r)) "\n" 2) p → q ∧ ¬q "\n" 3) p ∧ q → ¬r "\n" 4) (p ∧ r → ¬q</string>
    <string name="task8">Атом у логіці висловлювань це —</string>
    <string name="task8var">1) найменша частина виразу "\n" 2) елемент рівняння "\n" 3) формула "\n" 4) правильна відповідь відсутня</string>
    <string name="task9">Застосувати правило імплікації до формули p→q:</string>
    <string name="task9var">1) ¬p ∨ q "\n" 2) ¬p ∧ q "\n" 3) p ∨ ¬q "\n" 4) p ∧ q</string>
    <string name="task10">Сформулюйте назву закону:"\n" ¬(¬p) = p</string>
    <string name="task10var">1) закон подвійного заперечення "\n" 2) закон усунення імплікації "\n" 3) закон еквівалентності "\n" 4) закон подвійної рівності</string>
    <string name="pract1">Доведіть еквівалентність формули:</string>
    <string name="taskforPract">p → (q ∧ r) і (p → q) ∧ (p → r)</string>
    <string name="subtask1">Запишіть послідовність перетворень і виберіть назву використаного закону або правила</string>
    <string name="varBr">(</string>
    <string name="varBrB">)</string>
    <string name="varBr2">(¬p ∨</string>
    <string name="varPBr">(p </string>
    <string name="varP">p</string>
    <string name="varR">r</string>
    <string name="varEqua">~</string>
    <string name="varQ">q</string>
    <string name="varNotNotq">!!q</string>
    <string name="varNotQ">¬q</string>
    <string name="varNotP">¬p</string>
    <string name="arrowLeft">→</string>
    <string name="oR">∨</string>
    <string name="equaL">=</string>
    <string name="anD">∧</string>
    <string name="qANDr">(q ∧ r) =</string>
    <string name="orQ">∨ (q</string>
    <string name="rBracket">r)</string>
    <string name="ch1P">За правилом усунення імплікації</string>
    <string name="ch2P">За законом дистрибутивності</string>
    <string name="ch2P2">За законом дистрибутиності 3a</string>
    <string name="ch3P">За правилом комутативності</string>
    <string name="secch3P">За законом комутативності 1а</string>
    <string name="secCh2P">За законом подвійного заперечення 6</string>
    <string name="ch1P3">За правилом уведення імплікації</string>
    <string name="taskforPract2">p → (q ∧ r) = ¬p ∨ (q ∧ r)</string>
    <string name="answQwestion">Показати варіанти відповіді</string>
    <string name="taskforPract3">(¬p ∨ q) ∧ (¬p ∨ r )</string>
    <string name="explainForSecPr1">p → q та ¬q → ¬p</string>
    <string name="explainForSecPr2">p → q = ¬p ∨ q</string>
    <string name="explainForSecPr3">q ∨ ¬p</string>
    <string name="explainForSecPr4">¬(¬q) ∨ ¬p</string>
    <string name="promt_1">Помилка! Висловлюваннями можуть бути тільки розповідні речення.</string>
    <string name="promt_2">Помилка! Встановіть правильну відповідність.</string>
    <string name="promt_3">Помилка! В цьому законі не може бути ∨, а також повинно бути логічне заперечення.</string>
    <string name="promt_4">Помилка! Це, правило імплікації!</string>
    <string name="promt_5">Помилка! Дивись знак ~.</string>
    <string name="promt_6">Помилка! Правильна відповідь  3.</string>
    <string name="promt_7">Помилка! Перша частина висловлювання має бути в дужках!</string>
    <string name="promt_8">Помилка! Це не елемент і не частина.</string>
    <string name="promt_9">Помилка! → змінюється на ∨.</string>
    <string name="promt_10">Помилка! Дивись на перші два знаки!</string>
    <string name="for_drag_elem">Помилка! Встановіть правильну відповідність.</string>
    <string name="for_drag_elem2">Помилка! Зробіть правильний вибір.</string>
    <string name="practProblem2">Практичні завдання з поясненням</string>
    <string name="practProblem">Практичні завдання</string>
    <string name="choiseProblem">Виберіть № задачі</string>
    <string name="problem_1">Задача №1</string>
    <string name="problem_2">Задача №2</string>
    <string name="problem_3">Теореми</string>
    <string name="not_choise">Ви нічого не вибрали</string>
    <string name="return_to_menu">Повернутися до головного меню.</string>
    <string name="what_do">Що робимо далі?</string>
    <string name="title_test">Вітаю. Ви виконали тести!</string>
    <string name="title_problem">Вітаю. Ви розв’язали задачу!</string>
    <string name="firstHeader">Розглянемо формули F1 = (P → Q), "\n" F2 = ¬Q, G = ¬P</string>
    <string name="firstTaskForExp">Доведемо, що формула G - логічний наслідок формул F1 і F2</string>
    <string name="solutionBut">Розв’язання</string>
    <string name="solExp1">Спосіб 1. Скористаємося таблицями істинності, щоб показати, що формула G виконується в кожній інтерпритації, у якій виконується формула "\n" (P → Q) ∧ ¬Q</string>
    <string name="bigP">P</string>
    <string name="bigPexp">- ціни зростають;</string>
    <string name="bigQ">Q</string>
    <string name="bigSexp">- рівень життя спадає;</string>
    <string name="notQ">¬Q</string>
    <string name="bigRexp">- люди незадоволені.</string>
    <string name="next">Далі</string>
    <string name="solExp11">Необхідно довести логічне слідування:</string>
    <string name="p_q">P → Q</string>
    <string name="p_q_notQ">(P → Q) ∧ ¬Q</string>
    <string name="notP">¬P</string>
    <string name="firstStep">1-й спосіб</string>
    <string name="expl1">Перевіримо що формула "\n" (P → S) ∨ (S → R) ∨ P → R є тавтологією.</string>
    <string name="expl1_1">Для цього достатньо побудувати таблицю істинності.</string>
    <string name="p_s_s_r">(P → S) ∨ (S → R)</string>
    <string name="all_p_s_r">(P → S) ∨ (S → R) ∨ (P → R)</string>
    <string name="p_s1">P → S</string>
    <string name="s_r1">S → R</string>
    <string name="p_r1">P → R</string>
    <string name="bigt">T</string>
    <string name="bigf">F</string>
    <string name="explainForTable">Із таблиці видно, що є лише одна інтерпретація, у якій (P → Q) ∧ ¬Q виконується, а саме P = F, Q = F; у цій інтерпритації формула ¬P також виконується. Отже, за означенням формула ¬Р - логічний наслідок формул P → Q та ¬Q</string>
    <string name="method2">Скористаємося теоремою. Доведемо що формула (F1 ∧ F2) → G загальнозначуща. Для цього побудуємо таблицю  для формули (F1 ∧ F2) → G = ((P → Q) ∧ ¬Q) → ¬P.</string>
    <string name="method2exp">Спосіб 2.</string>
    <string name="forTable2">((P → Q) ∧ ¬Q) → ¬P</string>
    <string name="expForTable2">Оскільки формула ((P → Q) ∧ ¬Q) → ¬P загальнозначуща, то формула ¬Р - логічний наслідок формул P → Q та ¬Q.</string>
    <string name="forTable3">((P → Q) ∧ ¬Q) ∧ P</string>
    <string name="method3exp">Спосіб 3</string>
    <string name="method3">Скористаємося теоремою та доведемо що формула (F1 ∧ F2) → ¬G = ((P → Q) ∧ ¬Q) ∧ ¬(¬P) = ((P → Q) ∧ ¬Q) ∧ P заперечувана. Побудуємо таблицю істинності для цієї формули. Із таблиці видно, що формула (P → Q) ∧ !Q → !P хибна в будь-якій інтерпритації.</string>
    <string name="expForTable3">Тепер відповідно до теорми можна дійти висновку, що формула ¬Р логічно випливає з формул P → Q та ¬Q.</string>
    <string name="finish">До головного меню</string>
    <string name="l_negation">¬ - логічне заперечення</string>
    <string name="l_conjunction">∧ - кон’юнкція</string>
    <string name="l_disjunction">∨ - дизюнкція</string>
    <string name="l_implication">→ - імплікація</string>
    <string name="l_definition">~ - еквівалентність</string>
    <string name="l_commutative">1. Закони комутативності a) p ∨ q = q ∨ p; b) p ∧ q = q ∧ p</string>
    <string name="l_associative">2. Закони асоціативності a) (p ∨ q) ∨ r = p ∨ (q ∨ r); b) (p ∧ q) ∧ r = p ∧ (q ∧ r)</string>
    <string name="l_distributive">3. Закони дистрибутивності a) p ∨ (q ∧ r) = (p ∨ q) ∧ (p ∨ r); b) p ∧ (q ∨ r) = (p ∧ q) ∨ (p ∧ r)</string>
    <string name="l_noncontradiction">4. Закон суперечності p ∧ ¬p = F</string>
    <string name="l_excluded">5. Закон виключення третього p ∨ ¬p = T</string>
    <string name="l_double">6. Закон подвійного заперечення The law of double negation !!p = p</string>
    <string name="l_idempotence">7. Закони ідемпотентності a) p ∨ p = p; b) p ∧ p = p</string>
    <string name="l_absorption">8. Закони поглинання a) (p ∨ q) ∧ p = p; b) (p ∧ q) ∨ p = p</string>
    <string name="list_of_logic_symbol">Список логічних символів: http://catcut.net/TwrB</string>
    <string name="theorem_1">Теорема 1</string>
    <string name="explain_theorem_1">Формула G - логічний наслідок формул F1, F2,…,Fn тоді й лише тоді, коли формула ((F1 ∧ F2 ∧...∧Fn) → G) - загально значуща. \n\n <b>Доведення теореми.</b> \n\n <b>Необхідність.</b> Нехай G - логічний наслідок формул F1, F2,…,Fn та І - довільна їх інтерпретація. Якщо формули F1, F2,...,Fn істинні в інтерпритації І, то за означенням логічного наслідку формула G також істинна в І. Звідси випливає, що формула ((F1 ∧ F2 ∧...∧Fn) → G) істинна в інтерпритації І. З іншого боку, якщо не всі формули з F1, F2,...,Fn істинні в інтерпритації І, тобто принаймні одна з них хибна в І, то формула ((F1 ∧ F2 ∧...∧Fn) → G) істинна в І. Отже, формула ((F1 ∧ F2 ∧...∧Fn) → G) істинна в довільній інтерпритації, або ⊨ ((F1 ∧ F2 ∧...∧Fn) → G). \n\n <b>Достатність.</b> Припустимо що формула ((F1 ∧ F2 ∧...∧ Fn) → G) загальнозначуща. Тоді Якщо формула (F1 ∧ F2 ∧...∧ Fn) істинна в якійсь інтерпритації, то й формула G має бути істинною в цій інтерпритації, тобто G - логічний наслідок формул F1, F2,...,Fn. Якщо формула G - логічний наслідок формул F1, F2,...,Fn то формулу ((F1 ∧ F2 ∧...∧ Fn) → G) називають логічною теоремою, а G - вивідна формула. Вираз F1, F2,...,Fn ⊢ G називають правилом виведення. Тут гіпотези записано зліва від знака ⊢, а висновок - справа. Сам знак ⊢ має зміст "отже".</string>
    <string name="theorem_2">Теорема 2 (принципи прямої дедукції).</string>
    <string name="move_here">Листати тут →</string>
</resources>