<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".learning.withExplain.ExerciseWithExplain1">

    <LinearLayout
        android:id="@+id/firstLay"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp">

        <TextView
            android:id="@+id/firstHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstHeader"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/firstTaskForExp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstTaskForExp"
            android:gravity="center"
            android:textColor="#000"/>

    </LinearLayout>
    <Space
        android:id="@+id/spaceFirst"
        android:layout_width="match_parent"
        android:layout_height="20dp"
    android:layout_below="@+id/firstLay"/>

    <LinearLayout
        android:id="@+id/butSol"
        android:layout_below="@+id/spaceFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solutionBut"
            />
    </LinearLayout>

<LinearLayout
    android:id="@+id/solExp1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/spaceFirst"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="10dp">

    <TextView
        android:id="@+id/solExplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solExp1"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="#000"/>
</LinearLayout>
    <Space
        android:id="@+id/spaceSecond"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/solExp1"/>

    <LinearLayout
        android:id="@+id/layForTable"
        android:layout_below="@+id/spaceSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <TableLayout
            android:background="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:gravity="center"
                android:layout_margin="1dp">
                <TextView
                    android:id="@+id/trueRow11"
                    android:text="@string/bigP"
                    android:background="#B9B9B9"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/trueRow12"
                    android:text="@string/bigQ"
                    android:background="#B9B9B9"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/trueRow13"
                    android:text="@string/p_q"
                    android:background="#B9B9B9"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/trueRow14"
                    android:text="@string/notQ"
                    android:background="#B9B9B9"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/trueRow16"
                    android:text="@string/p_q_notQ"
                    android:background="#B9B9B9"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:layout_marginStart="1dp"/>

                <TextView
                    android:id="@+id/trueRow17"
                    android:text="@string/notP"
                    android:background="#B9B9B9"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:layout_marginStart="1dp"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <Button
        android:id="@+id/nextStepExp1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>