<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".learning.lessons.FirstLesson">

    <RelativeLayout
        android:id="@+id/qwest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"

        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/text10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task10"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"/>

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/text10"/>
        <TextView
            android:id="@+id/eplain10"
            android:layout_below="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/task10var"
            />

        <Space
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/eplain10"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/qwest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:layout_centerHorizontal="true">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/ch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_1"
                />
            <RadioButton
                android:id="@+id/ch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_2"

                />
            <RadioButton
                android:id="@+id/ch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_3"

                />
            <RadioButton
                android:id="@+id/ch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_4"

                />
        </RadioGroup>
    </RelativeLayout>


    <Button
        android:id="@+id/nextBut10"
        android:text="@string/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>