<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    tools:context=".learning.withExplain.Theorem1"
    android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <TextView
        android:id="@+id/topicTheorem"
        android:layout_gravity="center"
        android:text="@string/theorem_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textStyle="bold"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <TextView
        android:id="@+id/explainTheorem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#575353"
        android:text="@string/explain_theorem_1"
        android:textIsSelectable="true"/>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_here"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>

</LinearLayout>